--- a/seminarReport/index.html
+++ b/seminarReport/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href=stylesheet.css>
+    <link rel="canonical" href="https://school.nikkei.co.jp/nn/special/versant/column/03/index.html">
+    <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/column/03/index.html">
 </head>
 <body>
     <header class="l-header">
