Placed Seminar resport inside casestudy

--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -342,6 +342,18 @@
               </a>
             </div>
           </section>
+          <section class="p-index__column">
+            <h4 class="o-headline is__medium_report">Seminar Report</h4>
+            <div class="p-index__column_box">
+              <a href="../seminarReport/" class="p-index__column_link">
+                <img src="../seminarReport/20240911-photo/20240911-01.jpg" alt="コラムサムネイル">
+                <div class="p-index__column_link_info">
+                  <h5 class="report_head">グローバル人材育成の課題とは？<br>人事に求められる取り組みや役割を解説【セミナーレポート】</h5>
+                  <p class="report_date">○○○○/○○/○○</p>
+                </div>
+              </a>
+            </div>
+          </section>
         </div>
       </div>
 
