fixed the black button in seminar report

--- a/seminarReport/index.html
+++ b/seminarReport/index.html
@@ -21,10 +21,10 @@
           <div class="nav">
             <div class="nav-wrapper">
               <nav>
-                <a href="https://school.nikkei.co.jp/nn/special/versant/index.html">TOP</a><br>
-                <a href="https://school.nikkei.co.jp/nn/special/versant/score/index.html">スコアについて</a><br>
-                <a href="https://school.nikkei.co.jp/nn/special/versant/casestudy/index.html">導入事例/コラム</a><br>
-                <a href="https://school.nikkei.co.jp/nn/special/versant/faq/index.html">FAQ</a><br>
+                <a href="../index.html">TOP</a><br>
+                <a href="../score/index.html">スコアについて</a><br>
+                <a href="../casestudy/index.html">導入事例/コラム</a><br>
+                <a href="../faq/index.html">FAQ</a><br>
                 <a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求/トライアル</a><br>
                 <a href="https://lcbform.nikkei.com/IQ-versant.html?_gl=1*7937l*_gcl_au*MjMzMTEwNTIwLjE3MzAyMDE2NzU.">問い合わせ</a>
               </nav>
@@ -32,9 +32,9 @@
           </div>
         <div class="l-header__cnt">
             <ul class="l-header__nav-list">
-              <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/score/index.html">スコアについて</a></li>
-              <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/casestudy/index.html">導入事例/コラム</a></li>
-              <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/faq/index.html">FAQ</a></li>
+              <li class="l-header__nav-item"><a href="../score/index.html">スコアについて</a></li>
+              <li class="l-header__nav-item"><a href="../casestudy/index.html">導入事例/コラム</a></li>
+              <li class="l-header__nav-item"><a href="../faq/index.html">FAQ</a></li>
               <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求/トライアル</a></li>
               <li class="l-header__nav-last"><a href="https://lcbform.nikkei.com/IQ-versant.html?_gl=1*7937l*_gcl_au*MjMzMTEwNTIwLjE3MzAyMDE2NzU."target="_blank">問い合わせ</a></li>
             </ul>
@@ -168,9 +168,9 @@
               <li>グローバル人材プログラムの新たな動き</li>
               <li>研修見直しのチェック項目</li>
             </ul>
-            <div class="black-btn">
-              <a href="https://lcbform.nikkei.com/DF-versant_20220712_webinar_report.html"  class="o-btn__square__black" target="_blank" data-hu-event="資料ダウンロード" data-hu-actiontype="click">無料でダウンロード</a>
-            </div>
+            <a class="black-btn" href="https://school.nikkei.co.jp/feature/hr/contents/knowhow/52">
+              <span class="o-btn__square__black">無料でダウンロード</span>
+            </a>
           </div>
       
           <div class="column-report">
@@ -185,17 +185,18 @@
               <li>英語の昇進基準をTOIECからCEFRへと切り替えた理由と効果</li>
             </ul>
             
-            <div class="black-btn">
-              <a href="https://lcbform.nikkei.com/DF-versant_20220712_webinar_report.html"  class="o-btn__square__black" target="_blank" data-hu-event="資料ダウンロード" data-hu-actiontype="click">無料でダウンロード</a>
-            </div>
+            <a class="black-btn" href="https://lcbform.nikkei.com/DF-versant_20220712_webinar_report.html">
+              <span class="o-btn__square__black">無料でダウンロード</span>
+            </a>
           </div>
         </section>
         <div class="btn-box">
-          <div class="btn-place">
-            <a class="btn" href="../../" data-hu-actiontype="click">TOPへ戻る</a>
-         </div>
-         <div class="btn-place">
-          <a class="btn" href="../../casestudy/" data-hu-actiontype="click">導入事例/コラム一覧へ戻る</a>
+          <a class="btn-place" href="../../">
+            <span class="btn">TOPへ戻る</span>
+          </a>
+          <a class="btn-place" href="../../casestudy/">
+            <span class="btn">導入事例/コラム一覧へ戻る</span>
+          </a>
         </div>
       </div>
       </div>
