--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -349,7 +349,7 @@
                 <img src="../seminarReport/20240911-photo/20240911-01.jpg" alt="コラムサムネイル">
                 <div class="p-index__column_link_info">
                   <h5 class="report_head">グローバル人材育成の課題とは？<br>人事に求められる取り組みや役割を解説【セミナーレポート】</h5>
-                  <p class="report_date">○○○○/○○/○○</p>
+                  <p class="report_date">2024/12/04</p>
                 </div>
               </a>
             </div>
