--- a/seminarReport/index.html
+++ b/seminarReport/index.html
@@ -54,8 +54,8 @@
             <h1 class="headline">グローバル人材育成の課題とは？</h1>
             <h1>人事に求められる取り組みや役割を解説【セミナー動画】</h1>
             <div class="date">
-              <p class="date-t">公開日：</p>
-              <p class="date-t">更新日：</p>
+              <p class="date-t">公開日：2024/12/04</p>
+              <p class="date-t"></p>
             </div>
             <img class="img-center-top" src="20240911-photo/20240911-01.jpg" alt="img">
             <p>グローバル化したビジネス環境において日本企業が勝ち抜くための人材育成が大きな経営課題になっています。企業の人事部門は、どのようなアプローチで人材育成に取り組めばいいのでしょうか？日本経済新聞 人材・教育事業ユニットは、人材育成領域のプロフェッショナルでHRファーブラ代表取締役の山本紳也さんをゲストに迎え、経営層／人事・研修担当者向けセミナー『グローバル人材育成をどう実践していくのか～プロが語るHR部門の課題と役割～』を開催しました。セミナー後半では、企業の人事部門にグローバル人材育成の施策提案を行なっている日本経済新聞の北村大輔さんにも加わってもらい、実践的なアプローチと本質的なグローバル人材育成における人事部門の果たすべき役割について、現状と課題を掘り下げて解説してもらいました。聞き手は、東レおよびソニーにて海外事業の新規市場開拓に従事し、現在は複数の企業の組織開発支援を行うトイトイ合同会社の代表を務める永島寛之さんです。</p>
