--- a/seminarReport/index.html
+++ b/seminarReport/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href=stylesheet.css>
     <link rel="canonical" href="https://school.nikkei.co.jp/nn/special/versant/column/03/index.html">
     <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/column/03/index.html">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
     <header class="l-header">
