--- a/column/03/index.html
+++ b/column/03/index.html
@@ -23,10 +23,10 @@
           <div class="nav">
             <div class="nav-wrapper">
               <nav>
-                <a href="../index.html">TOP</a><br>
-                <a href="../score/index.html">スコアについて</a><br>
-                <a href="../casestudy/index.html">導入事例/コラム</a><br>
-                <a href="../faq/index.html">FAQ</a><br>
+                <a href="../../index.html">TOP</a><br>
+                <a href="../../score/index.html">スコアについて</a><br>
+                <a href="../../casestudy/index.html">導入事例/コラム</a><br>
+                <a href="../../faq/index.html">FAQ</a><br>
                 <a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求/トライアル</a><br>
                 <a href="https://lcbform.nikkei.com/IQ-versant.html?_gl=1*7937l*_gcl_au*MjMzMTEwNTIwLjE3MzAyMDE2NzU.">問い合わせ</a>
               </nav>
@@ -34,9 +34,9 @@
           </div>
         <div class="l-header__cnt">
             <ul class="l-header__nav-list">
-              <li class="l-header__nav-item"><a href="../score/index.html">スコアについて</a></li>
-              <li class="l-header__nav-item"><a href="../casestudy/index.html">導入事例/コラム</a></li>
-              <li class="l-header__nav-item"><a href="../faq/index.html">FAQ</a></li>
+              <li class="l-header__nav-item"><a href="../../score/index.html">スコアについて</a></li>
+              <li class="l-header__nav-item"><a href="../../casestudy/index.html">導入事例/コラム</a></li>
+              <li class="l-header__nav-item"><a href="../../faq/index.html">FAQ</a></li>
               <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求/トライアル</a></li>
               <li class="l-header__nav-last"><a href="https://lcbform.nikkei.com/IQ-versant.html?_gl=1*7937l*_gcl_au*MjMzMTEwNTIwLjE3MzAyMDE2NzU."target="_blank">問い合わせ</a></li>
             </ul>
@@ -99,13 +99,13 @@
             <h3>グローバル人材育成の第一歩としてまず取り組むべきことは、「グローバル人材の定義」</h3>
             <p>を明確にすることです。会社が描く未来像がそれぞれ違うように、グローバル人材の定義も会社によって異なります。定義を明確にした上で、経営層・人事部門・現場マネージャー・従業員が同じ理解をもって進むことが重要です。</p>
             <h3>▶︎グローバル人材の定義を決めずに進めない</h3>
-            <p><span class="name">永島さん</span>グローバル人材育成について、山本さんが感じている現状の課題感を教えてください。</p>
-            <p><span class="name">山本さん</span>世界に目を向けると、特に欧州などでは、すでに「グローバル」という言葉は使われなくなってきています。ビジネスの世界では、もうグローバルが当り前だからです。日本では「グローバル人材」という言葉が頻繁に飛び交っていますが、「そもそもグローバル人材とは？」という定義もできていない状況です。グローバル人材が「何のために必要なのか？」「どんな人なのか？」に対して、経営層・人事部門・現場マネージャー・従業員の考えが一致していないことも多いと感じます。</p>
+            <p><span class="name">永島</span>グローバル人材育成について、山本さんが感じている現状の課題感を教えてください。</p>
+            <p><span class="name">山本</span>世界に目を向けると、特に欧州などでは、すでに「グローバル」という言葉は使われなくなってきています。ビジネスの世界では、もうグローバルが当り前だからです。日本では「グローバル人材」という言葉が頻繁に飛び交っていますが、「そもそもグローバル人材とは？」という定義もできていない状況です。グローバル人材が「何のために必要なのか？」「どんな人なのか？」に対して、経営層・人事部門・現場マネージャー・従業員の考えが一致していないことも多いと感じます。</p>
             <img class="img-center" src="20240911-photo/20240911-04.jpg" alt="img">
-            <p><span class="name">永島さん</span>グローバル人材の定義を明確にするには、何をすればいいですか？</p>
-            <p><span class="name">山本さん</span>「何のためにどんな人が必要なのか？」は会社によって違うので、グローバル人材の定義もそれぞれの会社が自由に決めればいいことです。問題は、定義を決めないまま「グローバルで活躍できる人を育てよう」とすることです。グローバル人材の定義は、事業や場面によっても変わるので、本人・上司・人事担当者が同じ理解になるように、会社として統一しておくことが重要です。</p>
+            <p><span class="name">永島</span>グローバル人材の定義を明確にするには、何をすればいいですか？</p>
+            <p><span class="name">山本</span>「何のためにどんな人が必要なのか？」は会社によって違うので、グローバル人材の定義もそれぞれの会社が自由に決めればいいことです。問題は、定義を決めないまま「グローバルで活躍できる人を育てよう」とすることです。グローバル人材の定義は、事業や場面によっても変わるので、本人・上司・人事担当者が同じ理解になるように、会社として統一しておくことが重要です。</p>
             <h3>▶︎実践的なグローバル人材の7つの条件</h3>
-            <p><span class="name">永島さん</span>山本さんが提案している「実践的なグローバル人材の7つの条件」について教えてください。</p>
+            <p><span class="name">永島</span>山本さんが提案している「実践的なグローバル人材の7つの条件」について教えてください。</p>
             <img class="img-center" src="20240911-photo/20240911-03.jpg" alt="img">
             <ul class="list">
                 <li>「専門性」を身につけ活かす</li>
@@ -116,24 +116,24 @@
                 <li>客観性だけでなく「感性」を大切にする</li>
                 <li>自らを深く理解し、「自分軸」を持つ</li>
             </ul>
-            <p><span class="name">山本さん</span>「1」については、「英語ができる」「異文化を理解している」という人でも、海外赴任では派遣先や現地のパートナーから「この人はどんな専門性のある人なのか？」と見られるので、英語は片言でもいいですが、専門的なスキルは必須ということです。「2」「3」については、日本はハイコンテクストで「阿吽の呼吸」が通じますが、ローコンテクストなグローバル環境では自分の考えを論理的に説明して相手に伝えられなければ通じないということです。「4」「5」「6」は、グローバルで働くこと、常識の異なる人たちと一緒にいることを、純粋に楽しめるかです。最後の「7」は、会社の肩書ではなく個人が見られるグローバル環境で、「自分は何を大切にしているか。何を成し遂げたいか」という軸をしっかり示せるかということです。</p>
+            <p><span class="name">山本</span>「1」については、「英語ができる」「異文化を理解している」という人でも、海外赴任では派遣先や現地のパートナーから「この人はどんな専門性のある人なのか？」と見られるので、英語は片言でもいいですが、専門的なスキルは必須ということです。「2」「3」については、日本はハイコンテクストで「阿吽の呼吸」が通じますが、ローコンテクストなグローバル環境では自分の考えを論理的に説明して相手に伝えられなければ通じないということです。「4」「5」「6」は、グローバルで働くこと、常識の異なる人たちと一緒にいることを、純粋に楽しめるかです。最後の「7」は、会社の肩書ではなく個人が見られるグローバル環境で、「自分は何を大切にしているか。何を成し遂げたいか」という軸をしっかり示せるかということです。</p>
             <h2>グローバル人材育成の課題とは？</h2>
             <p>グローバル人材育成に取り組む上で、多くの企業に見られる課題が「目的意識の欠如」です。会社としても個人としても成果や成長につながる結果を得るためには、「何のためにやるのか？」を常に意識して臨む必要があります。</p>
             <h3>▶︎会社側の課題は「目的の明確化」</h3>
-            <p><span class="name">永島さん</span>グローバル人材育成について、会社側の具体的な課題を教えてください。</p>
-            <p><span class="name">山本さん</span>「何のため？」という目的意識が弱いと感じます。グローバル人材を育成して「ビジネスは成功するのか？」「会社は成長するのか？」という視点が欠けています。「企業や事業をグローバル化するために何が必要か？」なくして、「どんなグローバル人材が必要か？」は語れません。何を目指すかで必要な人材も変わってくるはずです。大切なのは、会社や事業の未来像にはどんな人材が必要かが明確になっていて、経営層も人事部門も現場マネージャーも従業員もそれを同じ軸で語れることなのです。</p>
+            <p><span class="name">永島</span>グローバル人材育成について、会社側の具体的な課題を教えてください。</p>
+            <p><span class="name">山本</span>「何のため？」という目的意識が弱いと感じます。グローバル人材を育成して「ビジネスは成功するのか？」「会社は成長するのか？」という視点が欠けています。「企業や事業をグローバル化するために何が必要か？」なくして、「どんなグローバル人材が必要か？」は語れません。何を目指すかで必要な人材も変わってくるはずです。大切なのは、会社や事業の未来像にはどんな人材が必要かが明確になっていて、経営層も人事部門も現場マネージャーも従業員もそれを同じ軸で語れることなのです。</p>
             <h3>▶︎個人側の課題は「キャリアオーナーシップ」</h3>
-            <p><span class="name">永島さん</span>グローバル人材育成について、個人側の具体的な課題を教えてください。</p>
-            <p><span class="name">山本さん</span>前提として、「どんな人生を送りたいのか？」「どんなキャリアを築きたいのか？」という、いわゆるキャリアオーナーシップが大切です。グローバル人材を目指すにしても、先ほど紹介した7つの定義を満たせばいいとは限りません。英語ができればいいのか、様々な国の人と仲良く付き合えるようになりたいのか、目的を明確にする必要があります。</p>
+            <p><span class="name">永島</span>グローバル人材育成について、個人側の具体的な課題を教えてください。</p>
+            <p><span class="name">山本</span>前提として、「どんな人生を送りたいのか？」「どんなキャリアを築きたいのか？」という、いわゆるキャリアオーナーシップが大切です。グローバル人材を目指すにしても、先ほど紹介した7つの定義を満たせばいいとは限りません。英語ができればいいのか、様々な国の人と仲良く付き合えるようになりたいのか、目的を明確にする必要があります。</p>
             <h3>▶︎人事部門の課題は「現場の意思疎通のサポート」</h3>
-            <p><span class="name">永島さん</span>海外赴任者に対して、人事部門はどんな支援をする必要がありますか？</p>
-            <p><span class="name">山本さん</span>赴任者には日本と派遣先の両方に上司がいるので、この2人の上司の連携がとれていないと、赴任者が板挟みになり成果や成長が期待できません。人事部門が体制を整えて、意思疎通できるようにサポートする必要があります。そして、海外赴任から戻った後、グローバルな経験を活かせる配置・配属を行うことも重要です。上司や人事担当者が本人と話しながら一緒にキャリアを考えることをセットでやらなければ、双方にとって無駄な投資になってしまいます。</p>
+            <p><span class="name">永島</span>海外赴任者に対して、人事部門はどんな支援をする必要がありますか？</p>
+            <p><span class="name">山本</span>赴任者には日本と派遣先の両方に上司がいるので、この2人の上司の連携がとれていないと、赴任者が板挟みになり成果や成長が期待できません。人事部門が体制を整えて、意思疎通できるようにサポートする必要があります。そして、海外赴任から戻った後、グローバルな経験を活かせる配置・配属を行うことも重要です。上司や人事担当者が本人と話しながら一緒にキャリアを考えることをセットでやらなければ、双方にとって無駄な投資になってしまいます。</p>
             <h2>グローバル人材に求められる3つのコミュニケーションスキルとは？</h2>
             <p>グローバル人材に必要なスキルと言えば、まず語学力を上げる人が多いはずです。しかし、常識も価値観も異なる環境の中、理解の仕方も説明の仕方も根本的に違う相手とのコミュニケーションは、語学力だけではカバーできません。本質的にどんなスキルが必要なのか、見極めて身につけることが重要なポイントになります。</p>
             <h3>▶︎キーワードは「英語力・アンコンシャスバイアス・議論する力」</h3>
             <img class="img-center" src="20240911-photo/20240911-02.jpg" alt="img">
-            <p><span class="name">永島さん</span>グローバルなビジネス環境の中で必要になるコミュニケーションスキルについて教えてください。</p>
-            <p><span class="name">山本さん</span>以下の3つが必須となるスキルだと思います。</p>
+            <p><span class="name">永島</span>グローバルなビジネス環境の中で必要になるコミュニケーションスキルについて教えてください。</p>
+            <p><span class="name">山本</span>以下の3つが必須となるスキルだと思います。</p>
             <ul class="list-b">
                 <li>英語力</li>
                 <li>DI&Iアンコンシャスバイアス</li>
@@ -143,19 +143,19 @@
             <h2>人事担当者が考えるべきこれからのグローバル人材育成とは？</h2>
             <p>企業のグローバル事業戦略においては、経営と連動した人材育成が不可欠になります。人事部門は、人材育成の主導権を持ちつつも、経営層や現場としっかり連携をとることで、より成果・成長につながるグローバル人材育成を進めていくことができます。</p>
             <h3>▶︎経営層や現場との連携を強化する</h3>
-            <p><span class="name">永島さん</span>グローバル人材教育において、人事担当者がおさえておくべきポイントを教えてください。</p>
-            <p><span class="name">山本さん</span>「何のために何を身につけるのか？」が重要になると思います。全員一律の語学研修・異文化研修も有効ですが、それは入り口でしかありません。「どんな国で、どんな仕事を任されて、どんな責任を負うのか？」をわかった上で準備することで、その人の本来のバリューを発揮することができるはずです。ただしこれは人事部門だけでできることではないので、現場と連携しながら準備を進めることがポイントになると思います</p>
-            <p><span class="name">永島さん</span>日本企業のグローバル化の現場を見ている北村さんが感じている課題を教えてください。</p>
-            <p><span class="name">北村さん</span>非財務情報の開示が求められるようになり、自社のグローバル事業戦略について、「どんな未来を描き、どんな人材を求めているのか？」というストーリーを独自性のある言葉で言語化したいという会社が増えています。こういった動きが活発化するのはいいと思いますが、実態として、グローバル事業戦略の担当者自身には海外経験がなく、グローバルに対する肌感覚を持っていないことはよくあります。トライ&エラーを繰り返して経験を積む必要がある局面でも、慎重になり過ぎて議論が長引いてしまうケースもあります</p>
+            <p><span class="name">永島</span>グローバル人材教育において、人事担当者がおさえておくべきポイントを教えてください。</p>
+            <p><span class="name">山本</span>「何のために何を身につけるのか？」が重要になると思います。全員一律の語学研修・異文化研修も有効ですが、それは入り口でしかありません。「どんな国で、どんな仕事を任されて、どんな責任を負うのか？」をわかった上で準備することで、その人の本来のバリューを発揮することができるはずです。ただしこれは人事部門だけでできることではないので、現場と連携しながら準備を進めることがポイントになると思います</p>
+            <p><span class="name">永島</span>日本企業のグローバル化の現場を見ている北村さんが感じている課題を教えてください。</p>
+            <p><span class="name">北村</span>非財務情報の開示が求められるようになり、自社のグローバル事業戦略について、「どんな未来を描き、どんな人材を求めているのか？」というストーリーを独自性のある言葉で言語化したいという会社が増えています。こういった動きが活発化するのはいいと思いますが、実態として、グローバル事業戦略の担当者自身には海外経験がなく、グローバルに対する肌感覚を持っていないことはよくあります。トライ&エラーを繰り返して経験を積む必要がある局面でも、慎重になり過ぎて議論が長引いてしまうケースもあります</p>
             <img class="img-center" src="20240911-photo/20240911-06.jpg" alt="img">
-            <p><span class="name">永島さん</span>「グローバル人材教育＝赴任者研修」という印象がありますが、現在の状況はどうですか？</p>
-            <p><span class="name">北村さん</span>ニーズが顕在化している人に何かを用意するという対処療法的なやり方がこれまでは多かったと思いますが、経営と連動した中期的な人材育成に取り組んでいる会社では、考え方を「人事は経営のパートナー」から「人事が経営をドライブしていく」にシフトして、人事部門からかグローバル化を進めようとする動きも出始めています。</p>
+            <p><span class="name">永島</span>「グローバル人材教育＝赴任者研修」という印象がありますが、現在の状況はどうですか？</p>
+            <p><span class="name">北村</span>ニーズが顕在化している人に何かを用意するという対処療法的なやり方がこれまでは多かったと思いますが、経営と連動した中期的な人材育成に取り組んでいる会社では、考え方を「人事は経営のパートナー」から「人事が経営をドライブしていく」にシフトして、人事部門からかグローバル化を進めようとする動きも出始めています。</p>
             <h3>▶︎これからはソフトスキルに注目</h3>
-            <p><span class="name">永島さん</span>グローバル化への第一歩として、まずは何から始めればいいですか？</p>
-            <p><span class="name">北村さん</span>これまでは、投資効果が見えやすいハードスキル中心の育成が多かったですが、ハードスキルはAIがやってくれる時代に突入しました。今後は、新たな価値を見出す力や一緒に働きたいと思われる関係構築力など、ソフトスキルにフォーカスするといいと思います。ソフトスキル領域では経験が重要なので、座学やインプットが中心の研修だけでなく、OFF-JTとOJTの両方を絡めて機会を提供する仕組みを作ることも大切だと思います。</p>
+            <p><span class="name">永島</span>グローバル化への第一歩として、まずは何から始めればいいですか？</p>
+            <p><span class="name">北村</span>これまでは、投資効果が見えやすいハードスキル中心の育成が多かったですが、ハードスキルはAIがやってくれる時代に突入しました。今後は、新たな価値を見出す力や一緒に働きたいと思われる関係構築力など、ソフトスキルにフォーカスするといいと思います。ソフトスキル領域では経験が重要なので、座学やインプットが中心の研修だけでなく、OFF-JTとOJTの両方を絡めて機会を提供する仕組みを作ることも大切だと思います。</p>
             <h3>まとめ</h3>
-            <p><span class="name">永島さん</span>最後に、グローバル人材育成に悩んでいる方にメッセージをお願いします。</p>
-            <p><span class="name">山本さん</span>日本は「阿吽の呼吸」が通じるハイコンテクストで、アメリカやドイツなどは言葉で説明しないと伝わらないローコンテクストと言われています。我々が努力で説明力をつけることはできますが、ローコンテクストの人がハイコンテクストに合わせてコミュニケーションをとることは非常に難しく、そう簡単にはできません。つまり、日本企業が本気でグローバル化を考えるならば、ローコンテクスト側に入って行く必要があるのです。その考え方をベースに持って時間やお金を投資していくことを、人事部門と現場が一緒になって考えていってほしいと思います。</p>
+            <p><span class="name">永島</span>最後に、グローバル人材育成に悩んでいる方にメッセージをお願いします。</p>
+            <p><span class="name">山本</span>日本は「阿吽の呼吸」が通じるハイコンテクストで、アメリカやドイツなどは言葉で説明しないと伝わらないローコンテクストと言われています。我々が努力で説明力をつけることはできますが、ローコンテクストの人がハイコンテクストに合わせてコミュニケーションをとることは非常に難しく、そう簡単にはできません。つまり、日本企業が本気でグローバル化を考えるならば、ローコンテクスト側に入って行く必要があるのです。その考え方をベースに持って時間やお金を投資していくことを、人事部門と現場が一緒になって考えていってほしいと思います。</p>
             <p>グローバル人材育成の課題においては、常に「何のためのグローバル化か？」という本質的な目的を見失わずに「何を？」「誰に？」「どうやって？」を設計していくことが重要です。これらを議論する場を人事部門が積極的に用意し、よりよい環境を整えていってください。</p>
         </div>
         <section class="">
