--- a/column/03/index.html
+++ b/column/03/index.html
@@ -53,8 +53,7 @@
             <span>></span>
             <a>グローバル人材育成の課題とは？</a>
           </div>
-            <h1 class="headline">グローバル人材育成の課題とは？</h1>
-            <h1>人事に求められる取り組みや役割を解説【セミナー動画】</h1>
+            <h1 class="headline">グローバル人材育成の課題とは？<br>人事に求められる取り組みや役割を解説【セミナーレポート】</h1>
             <div class="date">
               <p class="date-t">公開日：2024/12/04</p>
               <p class="date-t"></p>
