--- a/column/03/index.html
+++ b/column/03/index.html
@@ -27,8 +27,28 @@
           }
       }
       </script>
-   
-
+      <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "BreadcrumbList",
+          "itemListElement": [{
+            "@type": "ListItem",
+            "position": 1,
+            "name": "VERSANT TOP",
+            "item": "https://school.nikkei.co.jp/nn/special/versant/index.html"
+          },{
+            "@type": "ListItem",
+            "position": 2,
+            "name": "導入事例/コラム",
+            "item": "https://school.nikkei.co.jp/nn/special/versant/casestudy/index.html"
+          },{
+            "@type": "ListItem",
+            "position": 3,
+            "name": "グローバル人材育成の課題とは？",
+            "item": "https://school.nikkei.co.jp/nn/special/versant/column/03/index.html"
+          }]
+        }
+        </script>
 </head>
 <body>
     <header class="l-header">
