--- a/index.html
+++ b/index.html
@@ -377,53 +377,64 @@
       </div>
     </div>
   </section>
-
-  <section class="p-index__tool l-bg__light_gray">
+  <section class="p-index__column">
     <div class="l-bg__gray is__near_footer">
       <div class="l-inner">
-
-      <section class="p-index__column">
-        <h4 class="o-headline is__medium" style="color:white">Special Column</h4>
-        <div class="p-index__column_box">
-          <a href="./column/01/" class="p-index__column_link">
-            <img src="./assets/img/index/column_01.jpg" alt="コラムサムネイル">
-            <div class="p-index__column_link_info">
-              <h5 class="column_head">経営課題は国際基準の英語力。対応急げ</h5>
-              <p class="column_date">2024/03/03</p>
+        <section class="p-index__column">
+          <h4 class="o-headline is__medium" style="color: white; padding-top: 30px;">Special Column</h4>
+          <div class="p-index__column_box">
+            <a href="column/01/" class="p-index__column_link">
+              <img src="assets/img/index/column_01.jpg" alt="コラムサムネイル">
+              <div class="p-index__column_link_info">
+                <h5 class="column_head">経営課題は国際基準の英語力。対応急げ</h5>
+                <p class="column_date">2024/03/03</p>
+              </div>
+            </a>
+            <a href="column/02/" class="p-index__column_link">
+              <img src="assets/img/index/column_02.jpg" alt="コラムサムネイル">
+              <div class="p-index__column_link_info">
+                <h5 class="column_head">社員の英語スピーキング力をVERSANTで可視化しませんか</h5>
+                <p class="column_date">2024/09/09</p>
+              </div>
+            </a>
+          </div>
+        </section>
+        <section class="p-index__column">
+            <h4 class="o-headline is__medium_report" style="margin-top: 150px;">Seminar Report</h4>
+            <div class="p-index__column_box">
+              <a href="column/03/index.html" class="p-index__column_link">
+                <img src="column/03/20240911-photo/20240911-01.jpg" alt="コラムサムネイル">
+                <div class="p-index__column_link_info">
+                  <h5 class="report_head">グローバル人材育成の課題とは？<br>人事に求められる取り組みや役割を解説【セミナーレポート】</h5>
+                  <p class="report_date">2024/12/04</p>
+                </div>
+              </a>
             </div>
-          </a>
-          <a href="./column/02/" class="p-index__column_link">
-            <img src="./assets/img/index/column_02.jpg" alt="コラムサムネイル">
-            <div class="p-index__column_link_info">
-              <h5 class="column_head">社員の英語スピーキング力をVERSANTで可視化しませんか</h5>
-              <p class="column_date">2024/09/09</p>
-            </div>
-          </a>
-        </div>
-      </section>
+        </section>
+      
 
-      <section class="p-index__relatedlink">
-        <h4 class="o-headline is__medium is__white">Related to</h4>
-        <ul class="o-btn__wrap_column">
-          <li>
-            <a href="https://school.nikkei.co.jp/feature/hr/contents/knowhow/33" target="_blank"  class="o-btn__square">資料請求</a>
-          </li>
-          <li>
-            <a href="https://lcbform.nikkei.com/OF-versant-trial.html" target="_blank"  class="o-btn__square">トライアル</a>
-          </li>
-          <li>
-            <a href="https://lcbform.nikkei.com/IQ-versant.html" target="_blank"  class="o-btn__square">お問い合わせ</a>
-          </li>
-        </ul>
-      </section>
+        <section class="p-index__relatedlink">
+           <h4 class="o-headline is__medium is__white">Related to</h4>
+           <ul class="o-btn__wrap_column">
+            <li>
+              <a href="https://school.nikkei.co.jp/feature/hr/contents/knowhow/33" target="_blank"  class="o-btn__square">資料請求</a>
+            </li>
+            <li>
+              <a href="https://lcbform.nikkei.com/OF-versant-trial.html" target="_blank"  class="o-btn__square">トライアル</a>
+            </li>
+            <li>
+              <a href="https://lcbform.nikkei.com/IQ-versant.html" target="_blank"  class="o-btn__square">お問い合わせ</a>
+            </li>
+           </ul>
+        </section>
 
-      <section class="p-index__news">
-        <h5 class="p-index__news_ttl">お知らせ</h5>
-        <div>
-          <p><a href="https://www.versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20240115.pdf?20240326" target="_blank" class="text_link">新テスト「VERSANT Speaking ＆Listening Test」内容を刷新！無料トライアル受験、受付中！</a></p>
-          <p><a href="https://versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20241001.pdf" target="_blank" class="text_link">VERSANT English Speaking Test販売終了のお知らせ</a></p>
-        </div>
-      </section>
+        <section class="p-index__news">
+          <h5 class="p-index__news_ttl">お知らせ</h5>
+          <div>
+            <p><a href="https://www.versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20240115.pdf?20240326" target="_blank" class="text_link">新テスト「VERSANT Speaking ＆Listening Test」内容を刷新！無料トライアル受験、受付中！</a></p>
+            <p><a href="https://versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20241001.pdf" target="_blank" class="text_link">VERSANT English Speaking Test販売終了のお知らせ</a></p>
+          </div>
+        </section>
       </div>
     </div>
   </section>
