adding link to logo

--- a/column/03/index.html
+++ b/column/03/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <header class="l-header">
-          <a href="./">
+          <a href="../../index.html">
             <img class="logo" src="logo/header_logo.png" alt="VERSANT&trade; ロゴ">
           </a>
           <input id="toggle" type="checkbox"></input>
