--- a/column/03/index.html
+++ b/column/03/index.html
@@ -138,7 +138,7 @@
         </div>
         <div>
             <h2>そもそもグローバル人材の定義とは？</h2>
-            <p class="margin">グローバル人材育成の第一歩としてまず取り組むべきことは、「グローバル人材の定義」</p>
+            <p>グローバル人材育成の第一歩としてまず取り組むべきことは、「グローバル人材の定義」</p>
             <p>を明確にすることです。会社が描く未来像がそれぞれ違うように、グローバル人材の定義も会社によって異なります。定義を明確にした上で、経営層・人事部門・現場マネージャー・従業員が同じ理解をもって進むことが重要です。</p>
             <h3>グローバル人材の定義を決めずに進めない</h3>
             <hr>
