--- a/column/03/index.html
+++ b/column/03/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href=stylesheet.css>
     <link rel="canonical" href="https://school.nikkei.co.jp/nn/special/versant/column/03/index.html">
     <title>グローバル人材育成の課題とは？人事に求められる取り組みや役割を解説｜VERSANT（ヴァーサント）【法人版】</title>
+    <meta name="description" content="グローバル化したビジネス環境において日本企業が勝ち抜くための人材育成が大きな経営課題になっています。その中で人事に求められる取り組みや役割について人材育成領域のプロフェッショナルでHRファーブラ代表取締役の山本紳也さんが解説。">
     <meta property="og:title" content="グローバル人材育成の課題とは？人事に求められる取り組みや役割を解説｜VERSANT（ヴァーサント）【法人版】">
     <meta property="og:description" content="グローバル化したビジネス環境において日本企業が勝ち抜くための人材育成が大きな経営課題になっています。その中で人事に求められる取り組みや役割について人材育成領域のプロフェッショナルでHRファーブラ代表取締役の山本紳也さんが解説。">
     <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/column/03/index.html">
