--- a/column/03/index.html
+++ b/column/03/index.html
@@ -139,8 +139,7 @@
         </div>
         <div>
             <h2>そもそもグローバル人材の定義とは？</h2>
-            <p>グローバル人材育成の第一歩としてまず取り組むべきことは、「グローバル人材の定義」</p>
-            <p>を明確にすることです。会社が描く未来像がそれぞれ違うように、グローバル人材の定義も会社によって異なります。定義を明確にした上で、経営層・人事部門・現場マネージャー・従業員が同じ理解をもって進むことが重要です。</p>
+            <p>グローバル人材育成の第一歩としてまず取り組むべきことは、「グローバル人材の定義」を明確にすることです。会社が描く未来像がそれぞれ違うように、グローバル人材の定義も会社によって異なります。定義を明確にした上で、経営層・人事部門・現場マネージャー・従業員が同じ理解をもって進むことが重要です。</p>
             <h3>グローバル人材の定義を決めずに進めない</h3>
             <hr>
             <p><span class="name">永島</span>グローバル人材育成について、山本さんが感じている現状の課題感を教えてください。</p>
