adding target feature to buttons

--- a/column/03/index.html
+++ b/column/03/index.html
@@ -221,7 +221,7 @@
               <li>グローバル人材プログラムの新たな動き</li>
               <li>研修見直しのチェック項目</li>
             </ul>
-            <a class="black-btn" href="https://school.nikkei.co.jp/feature/hr/contents/knowhow/52">
+            <a class="black-btn" href="https://school.nikkei.co.jp/feature/hr/contents/knowhow/52" target="_blank">
               <span class="o-btn__square__black">無料でダウンロード</span>
             </a>
           </div>
@@ -238,7 +238,7 @@
               <li>英語の昇進基準をTOIECからCEFRへと切り替えた理由と効果</li>
             </ul>
             
-            <a class="black-btn" href="https://lcbform.nikkei.com/DF-versant_20220712_webinar_report.html">
+            <a class="black-btn" href="https://lcbform.nikkei.com/DF-versant_20220712_webinar_report.html" target="_blank">
               <span class="o-btn__square__black">無料でダウンロード</span>
             </a>
           </div>
@@ -295,6 +295,6 @@
           </div>
         </div>
         <p class="copyright">Copyright@2024 Nikkei Inc. All rights reserved.</p>
-        </footer>
+      </footer>
 </body>
 </html>
