--- a/kiyaku_corp.html
+++ b/kiyaku_corp.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/kiyaku_corp.css">
+    <link rel="stylesheet" href="kiyaku_corp.css">
     <link rel="canonical" href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
