--- a/kiyaku_corp.html
+++ b/kiyaku_corp.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header class="l-header">
-        <a href="../../index.html">
-          <img class="logo" src="/column/03/logo/header_logo.png" alt="VERSANT&trade; ロゴ">
+        <a href="index.html">
+          <img class="logo" src="column/03/logo/header_logo.png" alt="VERSANT&trade; ロゴ">
         </a>
         <input id="toggle" type="checkbox"></input>
 
@@ -21,23 +21,23 @@
         <div class="nav">
           <div class="nav-wrapper">
             <nav>
-              <a href="/index.html">TOP</a><br>
-              <a href="/score/index.html">スコア</a><br>
+              <a href="index.html">TOP</a><br>
+              <a href="score/index.html">スコア</a><br>
               <a href="https://school.nikkei.co.jp/nn/special/versant/feature/index.html">機能</a><br>
               <a href="https://school.nikkei.co.jp/nn/special/versant/price/index.html">価格</a><br>
-              <a href="/casestudy/index.html">事例</a><br>
-              <a href="/faq/index.html">FAQ</a><br>
+              <a href="casestudy/index.html">事例</a><br>
+              <a href="faq/index.html">FAQ</a><br>
               <a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求</a>
             </nav>
           </div>
         </div>
       <div class="l-header__cnt">
           <ul class="l-header__nav-list">
-            <li class="l-header__nav-item"><a href="/score/index.html">スコア</a></li>
+            <li class="l-header__nav-item"><a href="score/index.html">スコア</a></li>
             <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/feature/index.html">機能</a></li>
-            <li class="l-header__nav-item"><a href="/score/index.html">価格</a></li>
-            <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/price/index.html">事例</a></li>
-            <li class="l-header__nav-item"><a href="/faq/index.html">FAQ</a></li>
+            <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/price/index.html">価格</a></li>
+            <li class="l-header__nav-item"><a href="casestudy/index.html">事例</a></li>
+            <li class="l-header__nav-item"><a href="faq/index.html">FAQ</a></li>
             <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求</a></li>
           </ul>
       </div>
@@ -163,7 +163,7 @@
            <p class="date">2018年4月1日制定</p>
            </div>
            <div class="partners">
-            <img class="partner-img" src="/assets/img/index/partnership_logo.svg" alt="versant partner">
+            <img class="partner-img" src="assets/img/index/partnership_logo.svg" alt="versant partner">
             <p class="partner-p">日本国内でのVERSANT事業は日本経済新聞社が独占販売権を保持しています。</p>
             <p class="partner-s">「Versant」はピアソングループのエヌシーエス ピアソン、インコーポレイテッドの登録商標です（登録第４９５４２８３号）</p>
            </div>
@@ -175,7 +175,7 @@
         <div class="footer-box">
           <div class="address">
             <div class="l-footer__info">
-              <div class="footer-logo"><img src="/column/03/logo/logo_footer.svg" alt="日経ビジネススクール NIKKEI BUSINESS SCHOOL"></div>
+              <div class="footer-logo"><img src="column/03/logo/logo_footer.svg" alt="日経ビジネススクール NIKKEI BUSINESS SCHOOL"></div>
                 <p class="footer-head">お問合せ窓口</p>
                 <div class="l-footer__info_txt"><span class="text-s">Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793 (平日10:00〜17:00)</a> </div>
                 <div class="l-footer__info_txt"><span class="text-s">Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
