--- a/kiyaku_corp.html
+++ b/kiyaku_corp.html
@@ -23,22 +23,22 @@
             <nav>
               <a href="index.html">TOP</a><br>
               <a href="score/index.html">スコア</a><br>
-              <a href="https://school.nikkei.co.jp/nn/special/versant/feature/index.html">機能</a><br>
-              <a href="https://school.nikkei.co.jp/nn/special/versant/price/index.html">価格</a><br>
+              <a href="feature/index.html">機能</a><br>
+              <a href="price/index.html">価格</a><br>
               <a href="casestudy/index.html">事例</a><br>
               <a href="faq/index.html">FAQ</a><br>
-              <a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求</a>
+              <a href="library/index.html">資料請求</a>
             </nav>
           </div>
         </div>
       <div class="l-header__cnt">
           <ul class="l-header__nav-list">
             <li class="l-header__nav-item"><a href="score/index.html">スコア</a></li>
-            <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/feature/index.html">機能</a></li>
-            <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/price/index.html">価格</a></li>
+            <li class="l-header__nav-item"><a href="feature/index.html">機能</a></li>
+            <li class="l-header__nav-item"><a href="price/index.html">価格</a></li>
             <li class="l-header__nav-item"><a href="casestudy/index.html">事例</a></li>
             <li class="l-header__nav-item"><a href="faq/index.html">FAQ</a></li>
-            <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求</a></li>
+            <li class="l-header__nav-item"><a href="library/index.html">資料請求</a></li>
           </ul>
       </div>
     </header>
