--- a/casestudy/05/index.html
+++ b/casestudy/05/index.html
@@ -97,12 +97,12 @@
 
     <nav class="l-header__nav">
       <ul class="l-header__nav-list">
-        <li class="l-header__nav-item sp_only"><a href="../../" class="l-header__nav-link">TOP</a></li>
-        <li class="l-header__nav-item"><a href="../../score/" class="l-header__nav-link">スコアについて</a></li>
-        <li class="l-header__nav-item"><a href="../../casestudy/" class="l-header__nav-link">導入事例/コラム</a></li>
-        <li class="l-header__nav-item"><a href="../../faq/" class="l-header__nav-link">FAQ</a></li>
-        <li class="l-header__nav-item"><a href="../../library/" class="l-header__nav-link">資料請求/トライアル</a></li>
-        <li class="l-header__nav-item"><a href="https://lcbform.nikkei.com/IQ-versant.html" class="l-header__nav-link" target="_blank">問い合わせ</a></li>
+        <li class="l-header__nav-item"><a href="../../score/index.html" class="l-header__nav-link">スコア</a></li>
+        <li class="l-header__nav-item"><a href="../../feature/index.html" class="l-header__nav-link">機能</a></li>
+        <li class="l-header__nav-item"><a href="../../price/index.html" class="l-header__nav-link">価格</a></li>
+        <li class="l-header__nav-item"><a href="../../casestudy/index.html" class="l-header__nav-link">事例</a></li>
+        <li class="l-header__nav-item"><a href="../../faq/index.html" class="l-header__nav-link">FAQ</a></li>
+        <li class="l-header__nav-item"><a href="../../library/index.html" class="l-header__nav-link">資料請求</a></li>
       </ul>
     </nav>
   </div>
