--- a/column/03/index.html
+++ b/column/03/index.html
@@ -66,22 +66,23 @@
           <div class="nav">
             <div class="nav-wrapper">
               <nav>
-                <a href="../../index.html">TOP</a><br>
-                <a href="../../score/index.html">スコアについて</a><br>
-                <a href="../../casestudy/index.html">導入事例/コラム</a><br>
+                <a href="../../score/index.html">スコア</a><br>
+                <a href="../../feature/index.html">機能</a><br>
+                <a href="../../price/index.html">価格</a><br>
+                <a href="../../casestudy/index.html">事例</a><br>
                 <a href="../../faq/index.html">FAQ</a><br>
-                <a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求/トライアル</a><br>
-                <a href="https://lcbform.nikkei.com/IQ-versant.html?_gl=1*7937l*_gcl_au*MjMzMTEwNTIwLjE3MzAyMDE2NzU.">問い合わせ</a>
+                <a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求</a><br>
               </nav>
             </div>
           </div>
         <div class="l-header__cnt">
             <ul class="l-header__nav-list">
-              <li class="l-header__nav-item"><a href="../../score/index.html">スコアについて</a></li>
-              <li class="l-header__nav-item"><a href="../../casestudy/index.html">導入事例/コラム</a></li>
+              <li class="l-header__nav-item"><a href="../../score/index.html">スコア</a></li>
+              <li class="l-header__nav-item"><a href="../../feature/index.html">機能</a></li>
+              <li class="l-header__nav-item"><a href="../../price/index.html">価格</a></li>
+              <li class="l-header__nav-item"><a href="../../casestudy/index.html">事例</a></li>
               <li class="l-header__nav-item"><a href="../../faq/index.html">FAQ</a></li>
-              <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求/トライアル</a></li>
-              <li class="l-header__nav-last"><a href="https://lcbform.nikkei.com/IQ-versant.html?_gl=1*7937l*_gcl_au*MjMzMTEwNTIwLjE3MzAyMDE2NzU."target="_blank">問い合わせ</a></li>
+              <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求</a></li>
             </ul>
         </div>
       </header>
