input <li> 6number's 4

--- a/kiyaku_corp.html
+++ b/kiyaku_corp.html
@@ -84,6 +84,7 @@
             <li>顧客は、初めて注文書を提出する際に、管理アカウントの登録依頼書を併せて提出してください。顧客は、管理アカウントにて、本商品のテストIDを管理し、受験者へのテストIDの配付および受験結果の管理をしてください。</li>
             <li>受験期限は、テストID発行日（当日を含む。）から最大12ヶ月後です。</li>
             <li>本商品を利用するために必要な環境および受験推奨環境は、<a class="link-text" href="https://www.versant.jp/take_a_test.html" target="_blank">本商品の公式サイト</a>に掲載します。顧客および受験者は、本商品を利用するにあたって必要となる情報機器、通信機器、ソフトウェア等の一切を、自らの責任と費用負担においてご準備の上、受験者は当該環境を満たした状態で受験してください。</li>
+            <li>本商品のシステムに不具合もしくは障害が発生した場合、または日経もしくはピアソンが本商品のシステムを停止させた場合は、テストの進行または完了が妨げられたときに限り、日経は顧客または受験者からのお申し出により、当該テストにつき再受験用のテストIDを発行いたします。他の事由（通信状態、受験機器および周囲の環境を含む利用環境ならびに誤操作等を含む。）は全て受験者の責任となり、再受験用のテストIDは発行いたしかねますので、予めご了承ください。</li>
            </ul>
            <h3>第７条（知的財産権）</h3>
            <p>本商品のソフトウェア、コンテンツ、商標、ロゴマークおよびマニュアル等（以下、「コンテンツ等」といいます。）に関する著作権その他一切の知的財産権は、ピアソンまたは他の権利者に帰属しています。顧客および受験者は、許可なくコンテンツ等につき第三者への開示、再利用、複製（録音を含む。）、蓄積、頒布、売却、譲渡、貸与、翻案、改変等を行わないでください。</p>
