added title and description

--- a/kiyaku_corp.html
+++ b/kiyaku_corp.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="kiyaku_corp.css">
     <link rel="canonical" href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html">
+    <title>VERSANT法人利用規約｜VERSANT（ヴァーサント）【法人版】</title>
+    <meta name="description" content="VERSANT法人利用規約のページ">
+    <meta property="og:title" content="VERSANT法人利用規約｜VERSANT（ヴァーサント）【法人版】">
+    <meta property="og:description" content="VERSANT法人利用規約のページ">
+    <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
